[package]
name = "openscad-lsp"
version = "2.0.2"
edition = "2024"
authors = ["Leathong"]
description = "A language(LSP) server for OpenSCAD"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["language-server", "lsp", "openscad"]
categories = ["development-tools"]
include = ["/src", "README.md"]
repository = "https://github.com/Leathong/openscad-LSP"

[dependencies]
lsp-server = "0.7.9"
lsp-types = "0.95.1"
serde = "1.0.228"
serde_json = "1.0.145"
tree-sitter = "0.25.10"
tree-sitter-openscad-ng = "0.6.1"
linked-hash-map = "0.5.6"
shellexpand = "3.1.1"
clap = {features = ["derive"], version = "4.5.48"}
lazy_static = "1.5.0"
regex = "1.11.3"
directories = "6.0.0"
tree-sitter-traversal2 = "0.2.1"
topiary-core = "0.6.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
