[package]
name = "openscad-lsp"
version = "2.0.3"
edition = "2024"
authors = ["Leathong"]
description = "A language(LSP) server for OpenSCAD"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["language-server", "lsp", "openscad"]
categories = ["development-tools"]
include = ["/src", "README.md"]
repository = "https://github.com/Leathong/openscad-LSP"

[dependencies]
lsp-server = "0.7.9"
lsp-types = { package = "gen-lsp-types", version = "0.4.0", features = ["url"]}
serde = "1.0.228"
serde_json = "1.0.150"
tree-sitter = "0.26.9"
tree-sitter-openscad-ng = "0.7.1"
linked-hash-map = "0.5.6"
shellexpand = "3.1.2"
clap = {features = ["derive"], version = "4.6.1"}
lazy_static = "1.5.0"
regex = "1.12.4"
directories = "6.0.0"
topiary-core = "0.7.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tree-sitter-rust = "0.24.2"
